force-app/main/default/objects/configTransacciones__c/configTransacciones__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Configuración excel transacciones</label>
</CustomObject>