force-app/main/default/objects/configTransacciones__c/fields/Es_Booleano__c.field-meta.xml
<CustomField>
    <fullName>Es_Booleano__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Booleano</label>
    <type>Checkbox</type>
</CustomField>