force-app/main/default/objects/configTransacciones__c/fields/Es_Fecha__c.field-meta.xml
<CustomField>
    <fullName>Es_Fecha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Fecha</label>
    <type>Checkbox</type>
</CustomField>