force-app/main/default/objects/configTransacciones__c/fields/Es_Fecha_Hora__c.field-meta.xml
<CustomField>
    <fullName>Es_Fecha_Hora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Fecha y Hora</label>
    <type>Checkbox</type>
</CustomField>