force-app/main/default/objects/configTransacciones__c/fields/Es_Numerico__c.field-meta.xml
<CustomField>
    <fullName>Es_Numerico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Numérico</label>
    <type>Checkbox</type>
</CustomField>