force-app/main/default/objects/configTransacciones__c/fields/Es_Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>Es_Obligatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Obligatorio</label>
    <type>Checkbox</type>
</CustomField>