force-app/main/default/objects/configTransacciones__c/fields/Es_Texto__c.field-meta.xml
<CustomField>
    <fullName>Es_Texto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Texto</label>
    <type>Checkbox</type>
</CustomField>