force-app/main/default/objects/configTransacciones__c/fields/Nombre_API_Campo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_API_Campo__c</fullName>
    <label>Nombre API Campo</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>